Added support for Dungeon Pause

--- a/SFSimulator.Frontend/Dialogs/ProgressBar.razor
+++ b/SFSimulator.Frontend/Dialogs/ProgressBar.razor
@@ -71,13 +71,16 @@
         "Making sure Eggman reworks new class into scout variant...",
         "Letting know Magi that warrior is worst class...",
         "Waiting to get mod on Tavern...",
+        "Siding up with Norbert...",
         "Making scrambled eggs on GS4 server...",
         "Quitting the game because of the new UI...",
         "Getting quadrillion mushrooms from bugged HV...",
         "Applauding 1.8 chest avg of the GOAT mentor...",
         "Getting ticket response in only 3 months...",
         "Switching to Mobile Dungeon because of better game design...",
-        "Waiting for Tavern Exam final results..."
+        "Waiting for Tavern Exam final results...",
+        "Finding new ways to exploit the game...",
+        "Living through tavern team internship hell...",
     ];
 
     protected override void OnInitialized()
