--- a/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
+++ b/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
@@ -2,17 +2,27 @@
 
 <RadzenCard class="bg-card px-5">
     <RadzenText TextStyle="TextStyle.H3" class="text-blue-200!">Current version: @Constants.CurrentVersion</RadzenText>
-    <RadzenMarkdown class="px-10">
+    <RadzenMarkdown class="px-10" Text="
+### 2.1.0
+
+#### New Features / Improvements 
+- **Dungeons**: Added support for Dungeon Pause strategy
+- **Toilet**: Adjusted Aura, Mana and Tidy Toilet Event to reflect new game changes
+- **Items**: Adjusted item generation (attributes, armor and weapon damage) to reflect new game changes
+---
+<br/>
+
 ### 2.0.0
 
-#### New Features
-- **New UI**: The entire user interface has been redesigned for a more modern and intuitive experience.
+#### New Features / Improvements
+- **New UI**: The entire user interface has been redesigned for a more modern and intuitive experience
 - **Dungeons**: Added support for incorporating dungeons simulation *(currently only works if you poll data via SF Tools endpoint)*
 - **Pets**: Added support for selling pet food and simulating pet progression *(poll data via SF Tools endpoint)*
 #### Removed 
 - **Tavern Quest**: quest are no longer optimal gameplay, thus support for them is removed 
 
----
 
-    </RadzenMarkdown>
+---
+<br/>
+"/>
 </RadzenCard>
