--- a/SFSimulator.Frontend/wwwroot/app.output.css
+++ b/SFSimulator.Frontend/wwwroot/app.output.css
@@ -202,6 +202,9 @@
   .grid {
     display: grid;
   }
+  .hidden {
+    display: none;
+  }
   .h-100 {
     height: calc(var(--spacing) * 100);
   }
