--- a/SFSimulator.Frontend/Dialogs/ProgressBar.razor
+++ b/SFSimulator.Frontend/Dialogs/ProgressBar.razor
@@ -81,6 +81,7 @@
         "Waiting for Tavern Exam final results...",
         "Finding new ways to exploit the game...",
         "Living through tavern team internship hell...",
+        "Reading SF History Book from Resist 2 Exist...",
     ];
 
     protected override void OnInitialized()
