--- a/SFSimulator.Frontend/Pages/Simulator/SimulationResultView.razor
+++ b/SFSimulator.Frontend/Pages/Simulator/SimulationResultView.razor
@@ -51,14 +51,14 @@
     </RadzenRow>
     <hr class="my-2 border-neutral-600"/>
     <div class="mb-4 flex flex-col gap-5 xs:flex-row xs:gap-0">
-        <RadzenText class="flex basis-1/3 flex-col items-center text-center md:justify-center md:flex-row md:gap-2">
+        <RadzenText class="flex basis-1/3 flex-col items-center text-center md:flex-row md:justify-center md:gap-2">
             Days passed: @Result.Days
         </RadzenText>
-        <RadzenText class="flex basis-1/3 flex-col items-center text-center md:justify-center md:flex-row md:gap-2">
+        <RadzenText class="flex basis-1/3 flex-col items-center text-center md:flex-row md:justify-center md:gap-2">
             Base stats: @Result.AfterSimulation.BaseStat 
             <span>(+@(Result.AfterSimulation.BaseStat - Result.BeforeSimulation.BaseStat))</span>
         </RadzenText>
-        <RadzenText class="flex basis-1/3 flex-col items-center text-center md:justify-center md:flex-row md:gap-2">
+        <RadzenText class="flex basis-1/3 flex-col items-center text-center md:flex-row md:justify-center md:gap-2">
             Level: @Result.AfterSimulation.Level 
             <span>(+@(Result.AfterSimulation.Level - Result.BeforeSimulation.Level))</span>
         </RadzenText>
@@ -75,16 +75,40 @@
                     </div>
                 </Template>
                 <ChildContent>
-                    <RadzenStack>
-                        <RadzenRow>
-                            <RadzenColumn Size="12" SizeSM="6" Style="aspect-ratio: 1;">
-                                <Chart Records="TotalExperienceGains" Title="Total Experience"/>
-                            </RadzenColumn>
-                            <RadzenColumn Size="12" SizeSM="6" Style="aspect-ratio: 1;">
-                                <Chart Records="TotalBaseStatGains" Title="Total Base Stats"/>
-                            </RadzenColumn>
-                        </RadzenRow>
-                    </RadzenStack>
+                    <RadzenTabs>
+                        <Tabs>
+                            <RadzenTabsItem Text="Total Gains">
+                                <RadzenStack>
+                                    <RadzenRow>
+                                        <RadzenColumn Size="12" SizeSM="6" Style="aspect-ratio: 1;">
+                                            <Chart Records="TotalExperienceGains" Title="Total Experience" ChartType="ChartType.Bar" />
+                                        </RadzenColumn>
+                                        <RadzenColumn Size="12" SizeSM="6" Style="aspect-ratio: 1;">
+                                            <Chart Records="TotalBaseStatGains" Title="Total Base Stats" ChartType="ChartType.Bar" />
+                                        </RadzenColumn>
+                                    </RadzenRow>
+                                </RadzenStack>
+                            </RadzenTabsItem>
+                            <RadzenTabsItem Text="Level Progress">
+                                <RadzenStack>
+                                    <RadzenRow>
+                                        <RadzenColumn Size="12" Style="aspect-ratio: 2;">
+                                            <Chart Records="LevelProgress" Title="Level Progress" ChartType="ChartType.Line" ShouldInit="(recs) => recs.Count > 1"/>
+                                        </RadzenColumn>
+                                    </RadzenRow>
+                                </RadzenStack>
+                            </RadzenTabsItem>
+                            <RadzenTabsItem Text="Base Stat Progress">
+                                <RadzenStack>
+                                    <RadzenRow>
+                                        <RadzenColumn Size="12" Style="aspect-ratio: 2;">
+                                            <Chart Records="BaseStatProgress" Title="Base Stat Progress" ChartType="ChartType.Line" ShouldInit="(recs) => recs.Count > 1"/>
+                                        </RadzenColumn>
+                                    </RadzenRow>
+                                </RadzenStack>
+                            </RadzenTabsItem>
+                        </Tabs>
+                    </RadzenTabs>
                 </ChildContent>
             </RadzenAccordionItem>
             <RadzenAccordionItem>
