--- a/SFSimulator.Frontend/wwwroot/app.css
+++ b/SFSimulator.Frontend/wwwroot/app.css
@@ -147,16 +147,25 @@ ul[role=tablist] {
     background-color: rgba(0,0,0,0.2) !important;
 }
 
+.rz-tabview-nav {
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
 .progress-bar {
-  height: 1rem;
-  background-color: rgb(20,20,20);
-  width: 50%;
-  overflow: hidden;
-  border-radius: 0.25rem;
+    height: 1rem;
+    background-color: rgb(25,25,25);
+    width: min(540px, 50vw);
+    overflow: hidden;
+    border-radius: 0.25rem;
 }
 
 .progress-bar-image {
-    background-image: url(./favicon.png);
+    background-image: url(./comet.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: min(540px, 50vh);
+    width: min(960px, 100vw);
 }
 
 .progress-bar-value {
