Updated patch notes and bumped version

--- a/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
+++ b/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
@@ -3,6 +3,13 @@
 <RadzenCard class="bg-card px-5">
     <RadzenText TextStyle="TextStyle.H3" class="text-blue-200!">Current version: @Constants.CurrentVersion</RadzenText>
     <RadzenMarkdown class="px-10" Text="
+### 2.1.1
+
+#### New Features / Improvements 
+- **Statistcs**: Added level and base stat progress charts
+---
+<br/>
+
 ### 2.1.0
 
 #### New Features / Improvements 
