Updated build pipeline

--- a/SFSimulator.Frontend/Layout/MainLayout.razor
+++ b/SFSimulator.Frontend/Layout/MainLayout.razor
@@ -32,7 +32,7 @@
                         <RadzenCard class="bg-card">
                             <RadzenText TextStyle="TextStyle.H3" Text="Oops, something went wrong" class="text-red-300!"/>
                             @{
-                                var text = $"Try refreshing the page via button below. If the problem persists consider to report this to me on discord: {Constants.DiscordContact}";
+                                var text = $"Unexpecte error occured, try refreshing the page via button below";
                                 SentrySdk.CaptureException(exception);
                                 <RadzenText class="pl-4" Text="@text"/>
                             }
