--- a/SFSimulator.Frontend/Pages/Simulator/SimulatorPage.razor
+++ b/SFSimulator.Frontend/Pages/Simulator/SimulatorPage.razor
@@ -17,5 +17,5 @@
 
 @if (IsSimulating)
 {
-    <ProgressBar Visible="@IsSimulating" Current="@ProgressValue" Text=@ProgressText/>
+    <ProgressBar Current="@ProgressValue" Text=@ProgressText/>
 }
