--- a/SFSimulator.Frontend/Layout/MainLayout.razor
+++ b/SFSimulator.Frontend/Layout/MainLayout.razor
@@ -5,20 +5,27 @@
 <RadzenLayout Style="background-color: transparent; position: absolute; width: 100%;">
     <RadzenHeader>
         <RadzenStack class="rz-p-1 bg-dark-trans" Orientation="Orientation.Horizontal">
-            <RadzenButton Icon="menu" Size="ButtonSize.Large" Variant="Variant.Text" Click="ToggleMenu"/>
+            <RadzenButton Icon="menu" Size="ButtonSize.Large" Variant="Variant.Text" Click="ToggleMenu" />
             <div class="rz-mx-auto"></div>
-            <RadzenButton Icon="description" Variant="Variant.Text" Size="ButtonSize.Large" Click="NavigateToPatchNotes"/>
-            <RadzenButton Icon="quiz" Variant="Variant.Text" Size="ButtonSize.Large" Click="NavigateToManual"/>
-            <RadzenButton Path="@Constants.GithubUrl" Style="padding: 0.75rem;" Variant="Variant.Text" Size="ButtonSize.Large" Click="NavigateToGithub">
-                <svg style="width:24px;height:24px;" viewBox="0 0 98 98" xmlns="http://www.w3.org/2000/svg"><path fill-rule="nonzero" clip-rule="nonzero" d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z" fill="#fff" /></svg>
+            <RadzenButton Icon="description" Variant="Variant.Text" Size="ButtonSize.Large"
+                Click="NavigateToPatchNotes" />
+            <RadzenButton Icon="quiz" Variant="Variant.Text" Size="ButtonSize.Large" Click="NavigateToManual" />
+            <RadzenButton Path="@Constants.GithubUrl" Style="padding: 0.75rem;" Variant="Variant.Text"
+                Size="ButtonSize.Large" Click="NavigateToGithub">
+                <svg style="width:24px;height:24px;" viewBox="0 0 98 98" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="nonzero" clip-rule="nonzero"
+                        d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
+                        fill="#fff" />
+                </svg>
             </RadzenButton>
         </RadzenStack>
     </RadzenHeader>
     <RadzenSidebar Responsive="false" @bind-Expanded="ShowMenu" Style="position: absolute;">
         <RadzenPanelMenu Visible="@ShowMenu" Style="">
-            <RadzenPanelMenuItem Icon="hourglass_top" Text="Simulator" Path="/" Match="NavLinkMatch.All" Click="ToggleMenu"/>
-            <RadzenPanelMenuItem Icon="favorite" Text="Saved Results" Path="saved-results" Click="ToggleMenu"/>
-            <RadzenPanelMenuItem Icon="science" Text="Experimental" Path="experimental" Click="ToggleMenu"/>
+            <RadzenPanelMenuItem Icon="hourglass_top" Text="Simulator" Path="/" Match="NavLinkMatch.All"
+                Click="ToggleMenu" />
+            <RadzenPanelMenuItem Icon="favorite" Text="Saved Results" Path="saved-results" Click="ToggleMenu" />
+            <RadzenPanelMenuItem Icon="science" Text="Experimental" Path="experimental" Click="ToggleMenu" />
         </RadzenPanelMenu>
     </RadzenSidebar>
     <RadzenBody Style="background-color: rgba(0,0,0,0.4);scrollbar-gutter: stable;">
@@ -30,14 +37,19 @@
                     </ChildContent>
                     <ErrorContent Context="exception">
                         <RadzenCard class="bg-card">
-                            <RadzenText TextStyle="TextStyle.H3" Text="Oops, something went wrong" class="text-red-300!"/>
+                            <RadzenText TextStyle="TextStyle.H3" Text="Oops, something went wrong"
+                                class="text-red-300!" />
+                            <RadzenText TextStyle="TextStyle.Body1" class="mt-2" Text="@exception.Message" />
+                            <RadzenText TextStyle="TextStyle.Body1" class="mt-2" Text="@exception.StackTrace" />
                             @{
                                 var text = $"Unexpecte error occured, try refreshing the page via button below";
                                 SentrySdk.CaptureException(exception);
-                                <RadzenText class="pl-4" Text="@text"/>
+                                Console.Error.WriteLine(exception);
+                                <RadzenText class="pl-4" Text="@text" />
                             }
-                            <RadzenButton Variant="Variant.Filled" ButtonStyle="ButtonStyle.Secondary" Shade="Shade.Lighter" class="mt-4!" 
-                                Click="() => NavigationManager.Refresh(true)" Text="Refresh"/>
+                            <RadzenButton Variant="Variant.Filled" ButtonStyle="ButtonStyle.Secondary"
+                                Shade="Shade.Lighter" class="mt-4!" Click="() => NavigationManager.Refresh(true)"
+                                Text="Refresh" />
                         </RadzenCard>
                     </ErrorContent>
                 </ErrorBoundary>
