--- a/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
+++ b/SFSimulator.Frontend/Pages/PatchNotes/PatchNotesPage.razor
@@ -3,6 +3,13 @@
 <RadzenCard class="bg-card px-5">
     <RadzenText TextStyle="TextStyle.H3" class="text-blue-200!">Current version: @Constants.CurrentVersion</RadzenText>
     <RadzenMarkdown class="px-10" Text="
+### 2.1.2
+
+#### New Features / Improvements 
+- **Plague Doctor**: Added support for Plague Doctor class
+---
+<br/>
+
 ### 2.1.1
 
 #### New Features / Improvements 
